fix spacing issue

--- a/css/hangman.css
+++ b/css/hangman.css
@@ -6,6 +6,7 @@
 
 body {
     background: url(https://media.istockphoto.com/photos/green-chalkboard-background-picture-id1150072676?k=20&m=1150072676&s=170667a&w=0&h=rXJox0Qx3Q16sxwyhXBTDczqb1NOeAs7rvh0Lhn_xrg=);
+    background-size: cover;
 }
 
 div {
